[package]
name = "isucholar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0"
actix-multipart = "0.7.2"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = { version = "4.0.0" }
bcrypt = "0.15.1"
chrono = "0.4"
env_logger = "0.11.4"
futures = "0.3"
lazy_static = "1"
listenfd = "1.0.1"
log = "0.4"
mime = "0.3"
num-traits = "0.2"
reqwest = "0.12.5"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
sqlx = { version = "0.5.13", default-features = false, features = [
    "macros",
    "runtime-actix-rustls",
    "mysql",
    "chrono",
    "decimal",
] }
tokio = { version = "1", features = ["fs", "process"] }
ulid = "1.1.3"
